--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Baskervville SC", serif;
 }
 .navbar{
     display: flex;
@@ -37,10 +38,10 @@
 }
 .container img{
     width: 200px;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    box-shadow: 0 16px 20px rgba(0, 0, 0, 0.2);
 }
 .content{
     flex: 1;
