--- a/table.css
+++ b/table.css
@@ -2,8 +2,8 @@
     margin: 10px;
     padding: 10px;
     box-sizing: border-box;
+    font-family: "Roboto Mono", serif;
 }
-
 .container{
     margin: 10px ;
     padding: 20px;
