--- a/media.css
+++ b/media.css
@@ -2,27 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-image: url(ass/con\ bow.jpg);
+   
 }  
 
-.media{
+.media {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background-color: rgb(65, 65, 87);
     align-items: center;
     height: 100vh;
     gap: 50px;
-    margin-left: 30px;
+    margin-left: 200px;
     
 }
 
-.video{
-    width: 60%;
+.video {
+    width: 40%;
     height: 50%;
-    margin-left: 30px;
-   background-color: blue;
+     margin-left: 70px;
 }
-.audio{
+.audio {
     width: 100%;
-    height: 70%;
-    margin-left: 120px;
+    height: 80%;
+     margin-left: 130px;
+    
 }
